--- a/오픈소스_데이터_분석_2강.ipynb
+++ b/오픈소스_데이터_분석_2강.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_2%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sol-kr/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_2%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,47 +32,86 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "2Y2HEiaiRwAI"
+        "id": "2Y2HEiaiRwAI",
+        "outputId": "e019b99d-6c86-4e15-a232-b4ecaf0688b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 30, 40]\n",
+            "[50, 60, 70]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [10, 20, 30, 40, 50, 60, 70]\n",
         "# 첫 4개의 원소 출력\n",
-        "\n",
+        "first_four = numbers[ :4]\n",
         "print(first_four)\n",
         "# 뒤 3개의 원소를 출력\n",
-        "\n",
+        "last_three = numbers[-3: ]\n",
         "print(last_three)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "IO8bsKekR0W_"
+        "id": "IO8bsKekR0W_",
+        "outputId": "4131c72f-8274-4a14-8aa0-7868f3b309fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 30, 50, 70]\n",
+            "[70, 60, 50, 40, 30, 20, 10]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [10, 20, 30, 40, 50, 60, 70]\n",
         "\n",
         "# 홀수번째 항목 출력\n",
-        "\n",
+        "every_other_list = numbers[::2]\n",
         "print(every_other_list)\n",
         "\n",
         "# 역순 출력\n",
-        "\n",
+        "reverse_list = numbers[::-1]\n",
         "print(reverse_list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "60qOf7uxVdAg"
+        "id": "60qOf7uxVdAg",
+        "outputId": "dcd9cac3-d301-4f62-e4e5-4b2f3f3dcee0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3, 4], [5, 6, 7, 8]]\n",
+            "[[1, 2], [5, 6], [9, 10], [13, 14]]\n"
+          ]
+        }
+      ],
       "source": [
         "matrix = [\n",
         "    [1, 2, 3, 4],\n",
@@ -82,12 +121,12 @@
         "]\n",
         "\n",
         "# 첫 두 행 출력\n",
-        "\n",
+        "first_two_rows = matrix[0:2]\n",
         "\n",
         "print(first_two_rows)\n",
         "\n",
         "# 첫 두 열 출력\n",
-        "\n",
+        "first_two_columns = [row[0:2] for row in matrix]\n",
         "\n",
         "print(first_two_columns)"
       ]
@@ -103,102 +142,164 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "JpmgdsW9V0CY"
+        "id": "JpmgdsW9V0CY",
+        "outputId": "dce279c7-7b26-4982-fe31-a1d2cbcb70b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 2, 3, 4]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [ ]\n",
         "\n",
-        "# 1 ~ 5 포함 리스트 생성\n",
-        "for i in range(5):\n",
-        "    numbers.append(i)\n",
-        "\n",
+        "# 0 ~ 4 포함 리스트 생성\n",
+        "numbers = [num for num in range(5)]\n",
         "print(numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "cRC8x3_iW0im"
+        "id": "cRC8x3_iW0im",
+        "outputId": "79da0679-c107-4678-862d-1b2b833f8735",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [1, 2, 3, 4, 5]\n",
         "squares = [ ]\n",
         "\n",
         "# numbers의 모든 항목의 값을 제곱한 리스트\n",
-        "for num in numbers:\n",
-        "  squares.append(num ** 2)\n",
-        "\n",
+        "squares = [num ** 2 for num in numbers]\n",
         "print(squares)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "MAvimjk6Fqlc"
+        "id": "MAvimjk6Fqlc",
+        "outputId": "ed0ee663-faf4-49db-8603-7c27f95742ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n"
+          ]
+        }
+      ],
       "source": [
         "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
         "even_numbers = [ ]\n",
         "\n",
         "# 짝수만 추출한 리스트\n",
-        "for num in numbers:\n",
-        "    if num % 2 == 0:\n",
-        "        even_numbers.append(num)\n",
-        "\n",
+        "even_numbers = [num for num in numbers if num % 2 == 0]\n",
         "print(even_numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "HGO8XTxBFqld"
+        "id": "HGO8XTxBFqld",
+        "outputId": "19bb8955-a18e-497d-89d4-f930b6065625",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('사과', '주스'), ('사과', '잼'), ('사과', '통조림'), ('복숭아', '주스'), ('복숭아', '잼'), ('복숭아', '통조림'), ('바나나', '주스'), ('바나나', '잼'), ('바나나', '통조림')]\n"
+          ]
+        }
+      ],
       "source": [
         "list1 = ['사과', '복숭아', '바나나']\n",
         "list2 = ['주스', '잼', '통조림']\n",
         "pairs = [ ]\n",
         "\n",
         "# 두 리스트에 포함되 모든 원소를 조합한 투플의 리스트 생성\n",
-        "for fruit in list1:\n",
-        "    for product in list2:\n",
-        "        pairs.append((fruit, product))\n",
+        "pairs = [(fruit, product) for fruit in list1 for product in list2]\n",
         "\n",
         "print(pairs)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "K-BPhFTUFqle"
+        "id": "K-BPhFTUFqle",
+        "outputId": "166cdd90-3c83-47e0-c48f-f675a5d2677f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}\n"
+          ]
+        }
+      ],
       "source": [
         "squares = { }\n",
         "\n",
-        "# 딕셔너리 생성\n",
-        "for i in range(5):\n",
-        "    squares[i] = i ** 2\n",
-        "\n",
+        "# 딕셔너리 생성 {}\n",
+        "squares = {i: i ** 2 for i in range(5)}\n",
         "print(squares)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "UoTcC8-GFqlf"
+        "id": "UoTcC8-GFqlf",
+        "outputId": "b8c74afc-60ff-48a1-a2d7-eb81931917a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'서울': 957, '부산': 339, '인천': 294, '대구': 242}\n",
+            "{'부산': 339}\n"
+          ]
+        }
+      ],
       "source": [
         "city_population = {\n",
         "    '서울': 957, '부산': 339, '인천': 294, '대구': 242, '광주': 145, '대전': 147,\n",
@@ -206,11 +307,11 @@
         "}\n",
         "\n",
         "# 인구 200만명 이상의 도시 리스트\n",
-        "\n",
+        "large_cities = {city: pop for city, pop in city_population.items() if pop >= 200}\n",
         "print(large_cities)\n",
         "\n",
         "# 인구 300만 이상 및 이름에 '산'이 포함된 도시 리스트\n",
-        "\n",
+        "large_short_name_cities = {city: pop for city, pop in city_population.items() if pop >= 300 and '산' in city}\n",
         "print(large_short_name_cities)"
       ]
     },
@@ -225,11 +326,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
-        "id": "fzO0h6KfFqlg"
+        "id": "fzO0h6KfFqlg",
+        "outputId": "963eb4a5-dc3a-439e-a80b-78ed9f7a0098",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름: 홍길동, 나이: 30, 월급: 3500000원\n",
+            "이름: 홍길동, 나이: 30 세후 월급: 3150000원\n",
+            "이름: 홍길동, 나이: 30, 월급: 3500000원, 세금: 10%, 실수령액: 3150000:,원\n"
+          ]
+        }
+      ],
       "source": [
         "name = '홍길동'\n",
         "age = 30\n",
@@ -238,11 +353,11 @@
         "\n",
         "# C 스타일 문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
-        "\n",
+        "basic_format = '이름: %s, 나이: %d, 월급: %d원' % (name, age, salary)\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
-        "\n",
-        "\n",
-        "# 직원이름, 나이, 월급, 세금, 실수령액 추력\n",
+        "index_format = '이름: %s, 나이: %d 세후 월급: %d원' % (name, age, salary * (1-tax_rate))\n",
+        "# 직원이름, 나이, 월급, 세금, 실수령액 출력\n",
+        "keyword_format = '이름: %s, 나이: %d, 월급: %d원, 세금: %d%%, 실수령액: %d원' % (name, age, salary, tax_rate * 100, salary * (1-tax_rate))\n",
         "\n",
         "\n",
         "print(basic_format)\n",
@@ -260,21 +375,35 @@
         "\n",
         "# str.format 문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
-        "\n",
+        "basic_format = '이름: {}, 나이: {}, 월급: {}원'.format(name, age, salary)\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
-        "\n",
-        "# 직원이름, 나이, 월급, 세금, 실수령액 추력\n",
-        "\n",
+        "index_format = '이름: {0}, 나이: {1}, 세후 월급: {2}원'.format(name, age, int(salary * (1 - tax_rate)))\n",
+        "# 직원이름, 나이, 월급, 세금, 실수령액 출력\n",
+        "keyword_format = '이름: {employee}, 나이: {year}, 월급: {income:,}원, 세금: {tax:.0%}, 실수령액: {net_income:,}원'.format(employee = name, year = age, income = salary, tax = tax_rate, net_income = int(salary * (1 - tax_rate)))\n",
         "\n",
         "print(basic_format)\n",
         "print(index_format)\n",
         "print(keyword_format)"
       ],
       "metadata": {
-        "id": "cIvmmcQux_ph"
+        "id": "cIvmmcQux_ph",
+        "outputId": "b68ca6ac-fb4b-4abc-bcbe-59fb1dd6b46b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름: 홍길동, 나이: 30, 월급: 3500000원\n",
+            "이름: 홍길동, 나이: 30, 세후 월급: 3150000원\n",
+            "이름: 홍길동, 나이: 30, 월급: 3,500,000원, 세금: 10%, 실수령액: 3,150,000원\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -286,21 +415,35 @@
         "\n",
         "# f-문자열 포매팅\n",
         "# 이름, 나이, 월급 출력\n",
-        "\n",
+        "basic_format = f'이름: {name}, 나이: {age}, 월급: {salary:,}원'\n",
         "# 직원이름, 나이, 세후 월급 출력\n",
-        "\n",
+        "index_format = f'이름: {name}, 나이: {age}, 세후 월급 {salary * (1 - tax_rate):,}원'\n",
         "# 직원이름, 나이, 월급, 세금, 실수령액 추력\n",
-        "\n",
+        "keyword_format = f'이름: {name}, 나이: {age}, 월급: {salary:,}원, 세금: {tax_rate:.0%}, 실수령액: {int(salary * (1 - tax_rate)):,}원'\n",
         "\n",
         "print(basic_format)\n",
         "print(index_format)\n",
         "print(keyword_format)"
       ],
       "metadata": {
-        "id": "EIO3z-XQx_ce"
+        "id": "EIO3z-XQx_ce",
+        "outputId": "400711d4-1482-4638-ebf1-7f0d59040ca6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름: 홍길동, 나이: 30, 월급: 3,500,000원\n",
+            "이름: 홍길동, 나이: 30, 세후 월급 3,150,000.0원\n",
+            "이름: 홍길동, 나이: 30, 월급: 3,500,000원, 세금: 10%, 실수령액: 3,150,000원\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -313,41 +456,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "id": "eFpmQp3QFqlh"
       },
       "outputs": [],
       "source": [
         "# 파일 오픈 & 클로즈\n",
-        "file = open('output.txt', 'w')\n",
-        "file.write('Hello, world!\\n')\n"
+        "with open('output.txt', 'w') as file_write:\n",
+        "    file_write.write('Hello, world!\\n')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "id": "D0aOLti0Fqlh"
       },
       "outputs": [],
       "source": [
         "# 복수개의 파일(읽기 & 쓰기) 관리\n",
-        "\n"
+        "with open('input.txt', 'r') as in_file, open('output.txt', 'w') as out_file:\n",
+        "    for line in in_file:\n",
+        "        out_file.write(line.upper())\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {
-        "id": "6SE0rrD5Fqli"
+        "id": "6SE0rrD5Fqli",
+        "outputId": "c47b5f2a-f658-4a66-e90c-241dc7331d22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "학번,이름,데이터베이스,파이썬,클라우드\n",
+            "101,김철수,85,78,92\n",
+            "102,이영희,76,82,78\n",
+            "103,박지민,92,95,85\n",
+            "104,최준서,63,70,75\n",
+            "105,정미나,88,84,91\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "import urllib.request\n",
         "\n",
         "# URL 연결 관리\n",
-        "('https://raw.githubusercontent.com/jaehwachung/Data-Analysis-with-Open-Source/refs/heads/main/Chapter%203/students.csv')\n",
+        "with urllib.request.urlopen('https://raw.githubusercontent.com/jaehwachung/Data-Analysis-with-Open-Source/refs/heads/main/Chapter%203/students.csv') as response:\n",
         "    data = response.read( ).decode('utf-8')\n",
         "\n",
         "print(data)"
